update to add ourlens

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RandomDraft — We Create Apps</title>
-  <meta name="description" content="RandomDraft builds beautiful, purposeful mobile applications. Discover Steamly and more.">
+  <meta name="description" content="RandomDraft builds beautiful, purposeful mobile applications. Discover OurLens, Steamly, and more.">
   <meta name="theme-color" content="#0A0A0B">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,6 +52,24 @@
         <div class="app-card glass reveal">
           <div class="app-card-header">
             <div class="app-icon-wrapper">
+              <img src="assets/ourlens-icon.svg" alt="OurLens app icon" class="app-icon" width="96" height="96" loading="lazy">
+            </div>
+            <div class="app-card-info">
+              <h3 class="app-name">OurLens</h3>
+              <p class="app-tagline">Every moment, captured by everyone</p>
+            </div>
+          </div>
+          <p class="app-description">Share event photos with guests through a simple QR code scan. Guests upload directly to a shared gallery — no app download needed. Download everything as a ZIP when the event is over.</p>
+          <div class="app-badges">
+            <span class="badge">Web</span>
+            <span class="badge">Events &amp; Photography</span>
+          </div>
+          <a href="https://ourlens.app" class="app-link" target="_blank" rel="noopener noreferrer">Learn More &rarr;</a>
+        </div>
+
+        <div class="app-card glass reveal">
+          <div class="app-card-header">
+            <div class="app-icon-wrapper">
               <img src="assets/steamly-icon.png" alt="Steamly app icon" class="app-icon" width="96" height="96" loading="lazy">
             </div>
             <div class="app-card-info">
@@ -68,6 +86,46 @@
         </div>
 
         <!-- Future apps: duplicate the card above -->
+
+      </div>
+    </div>
+  </section>
+
+  <!-- OurLens Feature Detail -->
+  <section class="section section-features" id="ourlens-features">
+    <div class="container">
+      <h2 class="section-title reveal">What OurLens Does</h2>
+      <div class="feature-grid">
+
+        <div class="feature-card glass reveal">
+          <div class="feature-icon">&#128247;</div>
+          <h3 class="feature-name">QR Code Sharing</h3>
+          <p class="feature-desc">Display a QR code at your event and guests can instantly upload photos — no app install or signup required.</p>
+        </div>
+
+        <div class="feature-card glass reveal">
+          <div class="feature-icon">&#128444;</div>
+          <h3 class="feature-name">Shared Gallery</h3>
+          <p class="feature-desc">All event photos land in one beautiful gallery that the organizer and guests can browse in real time.</p>
+        </div>
+
+        <div class="feature-card glass reveal">
+          <div class="feature-icon">&#128230;</div>
+          <h3 class="feature-name">Bulk Download</h3>
+          <p class="feature-desc">When the event is over, download every photo as a single ZIP file — no hunting through group chats.</p>
+        </div>
+
+        <div class="feature-card glass reveal">
+          <div class="feature-icon">&#127916;</div>
+          <h3 class="feature-name">Live Slideshow</h3>
+          <p class="feature-desc">Cast a live slideshow of incoming photos on a screen at your event for everyone to enjoy.</p>
+        </div>
+
+        <div class="feature-card glass reveal">
+          <div class="feature-icon">&#128176;</div>
+          <h3 class="feature-name">Flexible Pricing</h3>
+          <p class="feature-desc">Start free for 4 hours or choose a plan that fits your event — from a quick gathering to a month-long celebration.</p>
+        </div>
 
       </div>
     </div>
